--- a/pom.xml
+++ b/pom.xml
@@ -17,13 +17,13 @@
     </dependency>
  
   
-  <!-- https://mvnrepository.com/artifact/javax.servlet/servlet-api 
+  <!-- https://mvnrepository.com/artifact/javax.servlet/servlet-api -->
 	<dependency>
 	    <groupId>javax.servlet</groupId>
 	    <artifactId>servlet-api</artifactId>
 	    <version>2.5</version>
 	    <scope>provided</scope>
-	</dependency>-->
+	</dependency>
 
   </dependencies>
   <build>
